--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES" initialViewController="DxO-cP-19h">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES" initialViewController="DxO-cP-19h">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -928,7 +928,7 @@
             <objects>
                 <viewController storyboardIdentifier="eventsFeed" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3YM-N3-Ofp" customClass="MyProgramViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" misplaced="YES" id="vGo-FD-HDE">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="618"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" pagingEnabled="YES" id="OpQ-At-nbu">
@@ -953,6 +953,7 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyAttending:" destination="3YM-N3-Ofp" eventType="touchUpInside" id="ONl-au-CVi"/>
+                                            <segue destination="uN1-jK-Wuq" kind="push" animates="NO" id="Cdl-T2-4OV"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hmd-oU-Owk">
@@ -965,6 +966,7 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyFavourites:" destination="3YM-N3-Ofp" eventType="touchUpInside" id="Pgf-Zc-ttV"/>
+                                            <segue destination="q9C-wm-4ug" kind="push" animates="NO" id="lUk-1e-ZYk"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="A3x-0X-7oU">
@@ -1086,6 +1088,7 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyCalender:" destination="q9C-wm-4ug" eventType="touchUpInside" id="dST-RL-o4F"/>
+                                            <segue destination="3YM-N3-Ofp" kind="push" animates="NO" id="4ze-bK-Lvy"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lAD-to-a8x">
@@ -1097,6 +1100,7 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyAttending:" destination="q9C-wm-4ug" eventType="touchUpInside" id="rTz-PE-6mT"/>
+                                            <segue destination="uN1-jK-Wuq" kind="push" animates="NO" id="B3C-Zm-d5g"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="sCe-jK-Vab">
@@ -1113,16 +1117,6 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <navigationBar contentMode="scaleToFill" misplaced="YES" id="T9e-yr-bjs">
-                                <rect key="frame" x="0.0" y="26" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="Find Your Life" id="ze8-eF-pyD"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -1858,6 +1852,7 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyCalender:" destination="uN1-jK-Wuq" eventType="touchUpInside" id="g27-GU-tZY"/>
+                                            <segue destination="3YM-N3-Ofp" kind="push" animates="NO" id="OO6-t8-IyV"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6vW-6T-Ud5">
@@ -1880,21 +1875,12 @@
                                         </state>
                                         <connections>
                                             <action selector="clickedMyFavourites:" destination="uN1-jK-Wuq" eventType="touchUpInside" id="lGR-2c-uTB"/>
+                                            <segue destination="q9C-wm-4ug" kind="push" animates="NO" id="L6Q-hR-pXI"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <navigationBar contentMode="scaleToFill" id="NuF-QD-vY5">
-                                <rect key="frame" x="0.0" y="26" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="Find Your Life" id="oMN-7B-FHU"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -1956,7 +1942,12 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="ZrE-a6-aH7"/>
-        <segue reference="Yzg-yO-FJ6"/>
         <segue reference="bDj-6L-rqu"/>
+        <segue reference="c3b-7q-UHr"/>
+        <segue reference="okc-1f-ZH5"/>
+        <segue reference="Yzg-yO-FJ6"/>
+        <segue reference="L6Q-hR-pXI"/>
+        <segue reference="B3C-Zm-d5g"/>
+        <segue reference="OO6-t8-IyV"/>
     </inferredMetricsTieBreakers>
 </document>
