--- a/Events/Main_iPhone.storyboard
+++ b/Events/Main_iPhone.storyboard
@@ -931,9 +931,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" pagingEnabled="YES" id="OpQ-At-nbu">
-                                <rect key="frame" x="0.0" y="113" width="320" height="306"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" scrollEnabled="NO" id="OpQ-At-nbu">
+                                <rect key="frame" x="0.0" y="37" width="320" height="348"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="TZI-2F-yAy">
+                                        <rect key="frame" x="0.0" y="372" width="320" height="167"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </tableView>
+                                </subviews>
+                                <connections>
+                                    <outlet property="delegate" destination="3YM-N3-Ofp" id="W6C-0h-5jv"/>
+                                </connections>
                             </scrollView>
                             <view contentMode="scaleToFill" id="Fo9-QF-KNL">
                                 <rect key="frame" x="0.0" y="64" width="320" height="45"/>
@@ -2013,6 +2023,6 @@
         <segue reference="okc-1f-ZH5"/>
         <segue reference="lUk-1e-ZYk"/>
         <segue reference="4ze-bK-Lvy"/>
-        <segue reference="B3C-Zm-d5g"/>
+        <segue reference="Cdl-T2-4OV"/>
     </inferredMetricsTieBreakers>
 </document>
